--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <lombok.version>1.18.10</lombok.version>
         <jackson.version>2.9.10</jackson.version>
         <common-io.version>2.6</common-io.version>
+        <selenide.version>5.3.1</selenide.version>
     </properties>
 
     <dependencies>
@@ -66,6 +67,12 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${common-io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>${selenide.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
